# TideAnalisisPredictionSystem

./: .gitmodules  CMakeLists.txt  COMPONENTS TABLE.docx  Manual de usuario - SPM.docx  Processing.qml  README.md  TideAnalisisPredictionSystem.pro  TideAnalisisPredictionSystem.pro.aV1876  TideAnalisisPredictionSystem.pro.user.19f8f02  TideAnalisisPredictionSystem.pro.user.33efce0  TideAnalisisPredictionSystem.pro.user.59e9c06  TideAnalisisPredictionSystem.pro.user.bd567ec  TideAnalisisPredictionSystem.pro.user.bd567ec.4.8-pre1  analizing.qml  button.qml  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  propuesta de diseño.pptx  ~$nual de usuario - SPM.docx
images/: .directory  .picasa.ini
include/: myseries.cpp  myseries.h  nivelacion_acuatica_calculo.cpp  nivelacion_acuatica_calculo.h  predictionfunctions.cpp  schemewidget.cpp  schemewidget.h  tidalschemeselectionwidget.cpp  tidalschemeselectionwidget.h
include/AlcanceLimite/: alcancelimitewindow.cpp  alcancelimitewindow.h  alcancelimitewindow.ui
include/AverageDialog/: averagedialog.cpp  averagedialog.h  averagedialog.ui
include/ChartModelMapper/: xytidalchartmodelmapper.cpp  xytidalchartmodelmapper.h
include/CoordinatesEditionWidget/: mycoordinateseditorwidget.cpp  mycoordinateseditorwidget.h
include/EditionComponents/: editiontable.cpp  editiontable.h  manualdataintroductionwidget.cpp  manualdataintroductionwidget.h  myheader.cpp  myheader.h
include/FilterDialog/: filtersdialog.h
include/FilterFunctions/: filter_facilities.h
include/FrequencyEditor/: freqeditor.cpp  freqeditor.h
include/FrontEnd/: displayresultwidget.cpp  nonharmoninccalcdialog.cpp  nonharmoninccalcdialog.h
include/HarmonicConstantClass/: astronomicalmeanlongitudes.cpp  astronomicalmeanlongitudes.h  doodsonnumbers.h  harmonicconstant.cpp  harmonicconstant.h  (+2 more)
(+235 files in other folders)
